# Prism-Multimodal-RAG-System

./: .gitignore  README.md  pyproject.toml
Prism/: README.md
Prism/backend/: pyproject.toml  reindex_all.py  reprocess_all.py  requirements.txt
Prism/backend/app/: main.py
Prism/backend/app/services/: ingestion_service.py  instructor_service.py  llm_service.py  qa_service.py  qdrant_service.py  reranker_service.py  vector_service.py
Prism/backend/data/: folders.json
Prism/backend/ingestion/: chunker.py  ocr_image.py  parse_pdf.py
